@@ -8,8 +8,10 @@ crystal-facet-uml (1.17.0) unreleased; urgency=medium
   * in nav view, a click into the current diagram zooms to edit mode
   * in create view, an icon next to the mouse cursor shows options
   * fix: type dropdown box does not change DB automatically if unknown type id
+  * the type drop down box shows icons to faster find the right type
+  * an icon grid allows to change types quickly
 
- -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 22 Dec 2019 21:30:00 +0100
+ -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 05 Jan 2020 20:30:00 +0100
 
 crystal-facet-uml (1.16.2) unreleased; urgency=medium
 
